# sauce-archiver

./: .envrc  .ghci  .gitignore  Cargo.toml  default.nix  flake.nix  readme  sauce-archiver.cabal  shell.nix  weeder.toml
.github/workflows/: build.yaml
app/: App.hs  Cli.hs  Danbooru.hs  Files.hs  Log.hs  Main.hs  SauceNao.hs  SauceNaoTypes.hs  Scratch.hs
src/: main.rs  saucenao.rs
