cabal-version: 3.0
name:          sauce-archiver
version:       0.1.0.0
license:
author:        ayatsfer@gmail.com
maintainer:    Fernando Ayats
build-type:    Simple

common warnings
  ghc-options: -Wall -Werror=missing-fields

common profiling
  ghc-options: -threaded -rtsopts -g

executable sauce-archiver
  import:           warnings, profiling
  hs-source-dirs:   app
  main-is:          Main.hs
  other-modules:
    Cli
    Files
    SauceNao
    SauceNaoTypes
    Danbooru

  default-language: Haskell2010
  build-depends:
    , aeson
    , async
    , base
    , Blammo
    , bytestring
    , cmdargs
    , directory
    , http-client
    , mtl
    , req
    , text
    , todo
    , transformers
    , unliftio
    , filepath
    , pipes
    , extra
