cabal-version: 3.0
name:          sauce-archiver
version:       0.1.0.0
license:
author:        ayatsfer@gmail.com
maintainer:    Fernando Ayats
build-type:    Simple

common warnings
  ghc-options: -Wall -Werror=missing-fields

executable sauce-archiver
  import:           warnings
  hs-source-dirs:   app
  main-is:          Main.hs
  other-modules:
    Log
    Cli
    SauceNao

  default-extensions:
    , OverloadedStrings
    , OverloadedRecordDot
    , DuplicateRecordFields
    , ScopedTypeVariables
    , LambdaCase

  ghc-options: -Werror=incomplete-patterns

  default-language: Haskell2010
  build-depends:
    , base
    , fast-logger
    , bytestring
    , monad-logger
    , text
    , transformers
    , mtl
    , optparse-applicative
    , req
    , http-client
    , aeson
    , unliftio
